layanan/secreton/deploy/staging/00-namespace.yaml
# Secreton Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: secreton
  labels:
    name: secreton
    environment: production
